--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -8,17 +8,19 @@
    "enchantment.minsenchantments.mermaids_blessing": "Mermaid's Blessing",
    "enchantment.minsenchantments.mermaids_blessing.desc": "while swimming, hostile mobs doesn't attack you",
    "enchantment.minsenchantments.sharp_waves": "Sharp Waves",
-   "enchantment.minsenchantments.sharp_waves.desc": "increase the damage of trident depend on distance traveled",
+   "enchantment.minsenchantments.sharp_waves.desc": "while in water, increase the damage of trident depend on distance traveled",
    "enchantment.minsenchantments.tide": "Tide",
    "enchantment.minsenchantments.tide.desc": "increase swimming speed constantly while keep swimming",
    "enchantment.minsenchantments.poseidons_grace": "Poseidon's Grace",
    "enchantment.minsenchantments.poseidons_grace.desc": "When tridents hit a mob, additional tridents will appear in nearby water",
    "enchantment.minsenchantments.waves_protection": "Wave's Protection",
-   "enchantment.minsenchantments.waves_protection.desc": "increase the swim speed for a short amount of time when attacked",
+   "enchantment.minsenchantments.waves_protection.desc": "while in water, increase the swim speed for a short amount of time when attacked",
+   "enchantment.minsenchantments.lord_of_the_sea": "Lord of the Sea",
+   "enchantment.minsenchantments.lord_of_the_sea.desc": "while in water, nearby water animals fight with you when you attacked",
    "enchantment.minsenchantments.curse_of_mermaid": "Curse of Mermaid",
-   "enchantment.minsenchantments.curse_of_mermaid.desc": "nearby natural entities attacking you first",
+   "enchantment.minsenchantments.curse_of_mermaid.desc": "while swimming, nearby natural entities attacking you first",
    "enchantment.minsenchantments.curse_of_floating": "Curse of Floating",
-   "enchantment.minsenchantments.curse_of_floating.desc": "make you keep floating in water",
+   "enchantment.minsenchantments.curse_of_floating.desc": "prevent sink in water",
    "enchantment.minsenchantments.curse_of_abyss": "Curse of Abyss",
    "enchantment.minsenchantments.curse_of_abyss.desc": "decrease fov while inside water",
    "enchantment.minsenchantments.rusty": "Rusty",
@@ -36,7 +38,7 @@
    "enchantment.minsenchantments.critical_strike": "Critical Strike",
    "enchantment.minsenchantments.critical_strike.desc": "change normal attack to critical attack depending on chance",
    "enchantment.minsenchantments.leech": "Leech",
-   "enchantment.minsenchantments.leech.desc": "",
+   "enchantment.minsenchantments.leech.desc": "heal your health depending on chance",
    "enchantment.minsenchantments.wallbreak": "Wallbreak",
    "enchantment.minsenchantments.wallbreak.desc": "projectile ignore blocks",
    "enchantment.minsenchantments.snipe": "Snipe",
@@ -46,5 +48,9 @@
    "enchantment.minsenchantments.auto_shielding": "Auto Shielding",
    "enchantment.minsenchantments.auto_shielding.desc": "automatically use shield depending on chance when held in offhand",
    "enchantment.minsenchantments.barrier": "Barrier",
-   "enchantment.minsenchantments.barrier.desc": "push entities and projectiles in certain range"
+   "enchantment.minsenchantments.barrier.desc": "push entities and projectiles in certain range",
+   "enchantment.minsenchantments.skillful": "Skillful",
+   "enchantment.minsenchantments.skillful.desc": "increase damage when durability is low",
+   "enchantment.minsenchantments.cell_division": "Cell Division",
+   "enchantment.minsenchantments.cell_division.desc": "projectile split to another small projectile on hit"
 }
