more enchants, bug fixes, etc

--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -1,56 +1,64 @@
 {
-   "block.minsenchantments.ocean_enchanting_table": "Ocean Enchanting Table",
-   "item.minsenchantments.ocean_enchanting_table": "Ocean Enchanting Table",
-   "block.minsenchantments.nether_enchanting_table": "Nether Enchanting Table",
-   "item.minsenchantments.nether_enchanting_table": "Nether Enchanting Table",
-   "enchantment.minsenchantments.waterbolt": "Waterbolt",
-   "enchantment.minsenchantments.waterbolt.desc": "Projectiles don¡¯t get affected by liquid blocks",
-   "enchantment.minsenchantments.mermaids_blessing": "Mermaid's Blessing",
-   "enchantment.minsenchantments.mermaids_blessing.desc": "while swimming, hostile mobs doesn't attack you",
-   "enchantment.minsenchantments.sharp_waves": "Sharp Waves",
-   "enchantment.minsenchantments.sharp_waves.desc": "while in water, increase the damage of trident depend on distance traveled",
-   "enchantment.minsenchantments.tide": "Tide",
-   "enchantment.minsenchantments.tide.desc": "increase swimming speed constantly while keep swimming",
-   "enchantment.minsenchantments.poseidons_grace": "Poseidon's Grace",
-   "enchantment.minsenchantments.poseidons_grace.desc": "When tridents hit a mob, additional tridents will appear in nearby water",
-   "enchantment.minsenchantments.waves_protection": "Wave's Protection",
-   "enchantment.minsenchantments.waves_protection.desc": "while in water, increase the swim speed for a short amount of time when attacked",
-   "enchantment.minsenchantments.lord_of_the_sea": "Lord of the Sea",
-   "enchantment.minsenchantments.lord_of_the_sea.desc": "while in water, nearby water animals fight with you when you attacked",
-   "enchantment.minsenchantments.curse_of_mermaid": "Curse of Mermaid",
-   "enchantment.minsenchantments.curse_of_mermaid.desc": "while swimming, nearby natural entities attacking you first",
-   "enchantment.minsenchantments.curse_of_floating": "Curse of Floating",
-   "enchantment.minsenchantments.curse_of_floating.desc": "prevent sink in water",
-   "enchantment.minsenchantments.curse_of_abyss": "Curse of Abyss",
-   "enchantment.minsenchantments.curse_of_abyss.desc": "decrease fov while inside water",
-   "enchantment.minsenchantments.rusty": "Rusty",
-   "enchantment.minsenchantments.rusty.desc": "decrease durability of item contantly while inside water",
-   "enchantment.minsenchantments.overgravity": "Overgravity",
-   "enchantment.minsenchantments.overgravity.desc": "increase the falling speed and fall damage. max level cause explosion on fall",
-   "enchantment.minsenchantments.lava_walker": "Lava Walker",
-   "enchantment.minsenchantments.lava_walker.desc": "similar with frost walker, but for lava (also no block)",
-   "enchantment.minsenchantments.auto_smelt": "Auto Smelt",
-   "enchantment.minsenchantments.auto_smelt.desc": "automatically smelt blocks when mined",
-   "enchantment.minsenchantments.recochet": "Recochet",
-   "enchantment.minsenchantments.recochet.desc": "",
-   "enchantment.minsenchantments.climb": "Climb",
-   "enchantment.minsenchantments.climb.desc": "you can climb wall like a spider",
-   "enchantment.minsenchantments.critical_strike": "Critical Strike",
-   "enchantment.minsenchantments.critical_strike.desc": "change normal attack to critical attack depending on chance",
-   "enchantment.minsenchantments.leech": "Leech",
-   "enchantment.minsenchantments.leech.desc": "heal your health depending on chance",
-   "enchantment.minsenchantments.wallbreak": "Wallbreak",
-   "enchantment.minsenchantments.wallbreak.desc": "projectile ignore blocks",
-   "enchantment.minsenchantments.snipe": "Snipe",
-   "enchantment.minsenchantments.snipe.desc": "increase damage and accuracy of projectile, but decrease charging speed",
-   "enchantment.minsenchantments.magnet": "Magnet",
-   "enchantment.minsenchantments.magnet.desc": "attract nearby xp orb and items while sneak",
-   "enchantment.minsenchantments.auto_shielding": "Auto Shielding",
-   "enchantment.minsenchantments.auto_shielding.desc": "automatically use shield depending on chance when held in offhand",
-   "enchantment.minsenchantments.barrier": "Barrier",
-   "enchantment.minsenchantments.barrier.desc": "push entities and projectiles in certain range",
-   "enchantment.minsenchantments.skillful": "Skillful",
-   "enchantment.minsenchantments.skillful.desc": "increase damage when durability is low",
-   "enchantment.minsenchantments.cell_division": "Cell Division",
-   "enchantment.minsenchantments.cell_division.desc": "projectile split to another small projectile on hit"
+	"block.minsenchantments.ocean_enchanting_table": "Ocean Enchanting Table",
+	"item.minsenchantments.ocean_enchanting_table": "Ocean Enchanting Table",
+	"block.minsenchantments.nether_enchanting_table": "Nether Enchanting Table",
+	"item.minsenchantments.nether_enchanting_table": "Nether Enchanting Table",
+	"container.enchant.prismarine_crystals.one": "1 Prismarine Crystals",
+	"container.enchant.prismarine_crystals.many": "%s Prismarine Crystals",
+	"container.enchant.blaze_powder.one": "1 Blaze Powder",
+	"container.enchant.blaze_powder.many": "%s Blaze Powder",
+	"enchantment.minsenchantments.waterbolt": "Waterbolt",
+	"enchantment.minsenchantments.waterbolt.desc": "Projectiles don¡¯t get affected by liquid blocks",
+	"enchantment.minsenchantments.mermaids_blessing": "Mermaid's Blessing",
+	"enchantment.minsenchantments.mermaids_blessing.desc": "while swimming, hostile mobs doesn't attack you",
+	"enchantment.minsenchantments.sharp_waves": "Sharp Waves",
+	"enchantment.minsenchantments.sharp_waves.desc": "while in water, increase the damage of trident depend on distance traveled",
+	"enchantment.minsenchantments.tide": "Tide",
+	"enchantment.minsenchantments.tide.desc": "increase swimming speed constantly while keep swimming",
+	"enchantment.minsenchantments.poseidons_grace": "Poseidon's Grace",
+	"enchantment.minsenchantments.poseidons_grace.desc": "When tridents hit a mob, additional tridents will appear in nearby water",
+	"enchantment.minsenchantments.waves_protection": "Wave's Protection",
+	"enchantment.minsenchantments.waves_protection.desc": "while in water, increase the swim speed for a short amount of time when attacked",
+	"enchantment.minsenchantments.lord_of_the_sea": "Lord of the Sea",
+	"enchantment.minsenchantments.lord_of_the_sea.desc": "while in water, nearby water animals fight with you when you attacked",
+	"enchantment.minsenchantments.curse_of_mermaid": "Curse of Mermaid",
+	"enchantment.minsenchantments.curse_of_mermaid.desc": "while swimming, nearby natural entities attacking you first",
+	"enchantment.minsenchantments.curse_of_floating": "Curse of Floating",
+	"enchantment.minsenchantments.curse_of_floating.desc": "prevent sink in water",
+	"enchantment.minsenchantments.curse_of_abyss": "Curse of Abyss",
+	"enchantment.minsenchantments.curse_of_abyss.desc": "decrease fov while inside water",
+	"enchantment.minsenchantments.rusty": "Rusty",
+	"enchantment.minsenchantments.rusty.desc": "decrease durability of item contantly while inside water",
+	"enchantment.minsenchantments.overgravity": "Overgravity",
+	"enchantment.minsenchantments.overgravity.desc": "increase the falling speed and fall damage. max level cause explosion on fall",
+	"enchantment.minsenchantments.lava_walker": "Lava Walker",
+	"enchantment.minsenchantments.lava_walker.desc": "similar with frost walker, but for lava (also no block)",
+	"enchantment.minsenchantments.auto_smelt": "Auto Smelt",
+	"enchantment.minsenchantments.auto_smelt.desc": "automatically smelt blocks when mined",
+	"enchantment.minsenchantments.flame_thorn": "Flame Thorn",
+	"enchantment.minsenchantments.flame_thorn.desc": "inflict fire with thorn damage",
+	"enchantment.minsenchantments.dry": "Dry",
+	"enchantment.minsenchantments.dry.desc": "absorb nearby water when sneak",
+	"enchantment.minsenchantments.recochet": "Recochet",
+	"enchantment.minsenchantments.recochet.desc": "projectile bounce when hit",
+	"enchantment.minsenchantments.climb": "Climb",
+	"enchantment.minsenchantments.climb.desc": "you can climb wall like a spider",
+	"enchantment.minsenchantments.critical_strike": "Critical Strike",
+	"enchantment.minsenchantments.critical_strike.desc": "change normal attack to critical attack depending on chance",
+	"enchantment.minsenchantments.leech": "Leech",
+	"enchantment.minsenchantments.leech.desc": "heal your health depending on chance",
+	"enchantment.minsenchantments.wallbreak": "Wallbreak",
+	"enchantment.minsenchantments.wallbreak.desc": "projectile ignore blocks",
+	"enchantment.minsenchantments.snipe": "Snipe",
+	"enchantment.minsenchantments.snipe.desc": "increase damage and accuracy of projectile, but decrease charging speed",
+	"enchantment.minsenchantments.magnet": "Magnet",
+	"enchantment.minsenchantments.magnet.desc": "attract nearby xp orb and items while sneak",
+	"enchantment.minsenchantments.auto_shielding": "Auto Shielding",
+	"enchantment.minsenchantments.auto_shielding.desc": "automatically use shield depending on chance when held in offhand",
+	"enchantment.minsenchantments.barrier": "Barrier",
+	"enchantment.minsenchantments.barrier.desc": "push entities and projectiles in certain range",
+	"enchantment.minsenchantments.skillful": "Skillful",
+	"enchantment.minsenchantments.skillful.desc": "increase damage when durability is low",
+	"enchantment.minsenchantments.cell_division": "Cell Division",
+	"enchantment.minsenchantments.cell_division.desc": "projectile split to another small projectile on hit"
 }
