--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -8,7 +8,7 @@
 	"container.enchant.blaze_powder.one": "1 Blaze Powder",
 	"container.enchant.blaze_powder.many": "%s Blaze Powder",
 	"enchantment.minsenchantments.waterbolt": "Waterbolt",
-	"enchantment.minsenchantments.waterbolt.desc": "Projectiles don¡¯t get affected by liquid blocks",
+	"enchantment.minsenchantments.waterbolt.desc": "projectiles don¡¯t get affected by liquid blocks",
 	"enchantment.minsenchantments.mermaids_blessing": "Mermaid's Blessing",
 	"enchantment.minsenchantments.mermaids_blessing.desc": "while swimming, hostile mobs doesn't attack you",
 	"enchantment.minsenchantments.sharp_waves": "Sharp Waves",
@@ -16,17 +16,29 @@
 	"enchantment.minsenchantments.tide": "Tide",
 	"enchantment.minsenchantments.tide.desc": "increase swimming speed constantly while keep swimming",
 	"enchantment.minsenchantments.poseidons_grace": "Poseidon's Grace",
-	"enchantment.minsenchantments.poseidons_grace.desc": "When tridents hit a mob, additional tridents will appear in nearby water",
+	"enchantment.minsenchantments.poseidons_grace.desc": "when tridents hit a mob, additional tridents will appear in nearby water",
 	"enchantment.minsenchantments.waves_protection": "Wave's Protection",
 	"enchantment.minsenchantments.waves_protection.desc": "while in water, increase the swim speed for a short amount of time when attacked",
 	"enchantment.minsenchantments.lord_of_the_sea": "Lord of the Sea",
 	"enchantment.minsenchantments.lord_of_the_sea.desc": "while in water, nearby water animals fight with you when you attacked",
+	"enchantment.minsenchantments.sailing": "Sailing",
+	"enchantment.minsenchantments.sailing.desc": "increase speed of riding vehicle",
+	"enchantment.minsenchantments.water_jet": "Water Jet",
+	"enchantment.minsenchantments.water_jet.desc": "able to shoot water jet without arrow while in water. while outside water, you can using splash water bottle to reload crossbow",
+	"enchantment.minsenchantments.aquatic_aura": "Aquatic Aura",
+	"enchantment.minsenchantments.aquatic_aura.desc": "make nearby entities inside underwater. decrease move speed, unable to breath, projectiles become slower",
 	"enchantment.minsenchantments.curse_of_mermaid": "Curse of Mermaid",
 	"enchantment.minsenchantments.curse_of_mermaid.desc": "while swimming, nearby natural entities attacking you first",
 	"enchantment.minsenchantments.curse_of_floating": "Curse of Floating",
 	"enchantment.minsenchantments.curse_of_floating.desc": "prevent sink in water",
 	"enchantment.minsenchantments.curse_of_abyss": "Curse of Abyss",
 	"enchantment.minsenchantments.curse_of_abyss.desc": "decrease fov while inside water",
+	"enchantment.minsenchantments.curse_of_undead": "Curse of Undead",
+	"enchantment.minsenchantments.curse_of_undead.desc": "while in daylight, burn like a undead",
+	"enchantment.minsenchantments.curse_of_enderman": "Curse of Enderman",
+	"enchantment.minsenchantments.curse_of_enderman.desc": "deal damage while in water, like a enderman",
+	"enchantment.minsenchantments.curse_of_sinking": "Curse of Sinking",
+	"enchantment.minsenchantments.curse_of_sinking.desc": "make you sink in water",
 	"enchantment.minsenchantments.rusty": "Rusty",
 	"enchantment.minsenchantments.rusty.desc": "decrease durability of item contantly while inside water",
 	"enchantment.minsenchantments.overgravity": "Overgravity",
@@ -36,7 +48,7 @@
 	"enchantment.minsenchantments.auto_smelt": "Auto Smelt",
 	"enchantment.minsenchantments.auto_smelt.desc": "automatically smelt blocks when mined",
 	"enchantment.minsenchantments.flame_thorn": "Flame Thorn",
-	"enchantment.minsenchantments.flame_thorn.desc": "inflict fire with thorn damage",
+	"enchantment.minsenchantments.flame_thorn.desc": "inflict fire with thorn damage when attacked",
 	"enchantment.minsenchantments.dry": "Dry",
 	"enchantment.minsenchantments.dry.desc": "absorb nearby water when sneak",
 	"enchantment.minsenchantments.recochet": "Recochet",
@@ -60,5 +72,15 @@
 	"enchantment.minsenchantments.skillful": "Skillful",
 	"enchantment.minsenchantments.skillful.desc": "increase damage when durability is low",
 	"enchantment.minsenchantments.cell_division": "Cell Division",
-	"enchantment.minsenchantments.cell_division.desc": "projectile split to another small projectile on hit"
+	"enchantment.minsenchantments.cell_division.desc": "projectile split to another small projectile on hit",
+	"enchantment.minsenchantments.quickdraw": "Quickdraw",
+	"enchantment.minsenchantments.quickdraw.desc": "increase charging speed",
+	"enchantment.minsenchantments.takeoff": "Takeoff",
+	"enchantment.minsenchantments.takeoff.desc": "able to start fly even in ground",
+	"enchantment.minsenchantments.armor_crack": "Armor Crack",
+	"enchantment.minsenchantments.armor_crack.desc": "increase damage depending on enemies armor",
+	"enchantment.minsenchantments.accelerate": "Accelerate",
+	"enchantment.minsenchantments.accelerate.desc": "increase attack speed for each hit",
+	"enchantment.minsenchantments.miner": "Miner",
+	"enchantment.minsenchantments.miner.desc": "projectile destroy blocks on hit"
 }
