--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -3,10 +3,14 @@
 	"item.minsenchantments.ocean_enchanting_table": "Ocean Enchanting Table",
 	"block.minsenchantments.nether_enchanting_table": "Nether Enchanting Table",
 	"item.minsenchantments.nether_enchanting_table": "Nether Enchanting Table",
+	"block.minsenchantments.end_enchanting_table": "End Enchanting Table",
+	"item.minsenchantments.end_enchanting_table": "End Enchanting Table",
 	"container.enchant.prismarine_crystals.one": "1 Prismarine Crystals",
 	"container.enchant.prismarine_crystals.many": "%s Prismarine Crystals",
 	"container.enchant.blaze_powder.one": "1 Blaze Powder",
 	"container.enchant.blaze_powder.many": "%s Blaze Powder",
+	"container.enchant.ender_eye.one": "1 Eye of Ender",
+	"container.enchant.ender_eye.many": "%s Eye of Ender",
 	"enchantment.minsenchantments.waterbolt": "Waterbolt",
 	"enchantment.minsenchantments.waterbolt.desc": "projectiles don¡¯t get affected by liquid blocks",
 	"enchantment.minsenchantments.mermaids_blessing": "Mermaid's Blessing",
