more enchants and sculk table

--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -5,12 +5,16 @@
 	"item.minsenchantments.nether_enchanting_table": "Nether Enchanting Table",
 	"block.minsenchantments.end_enchanting_table": "End Enchanting Table",
 	"item.minsenchantments.end_enchanting_table": "End Enchanting Table",
+	"block.minsenchantments.sculk_enchanting_table": "Sculk Enchanting Table",
+	"item.minsenchantments.sculk_enchanting_table": "Sculk Enchanting Table",
 	"container.enchant.prismarine_crystals.one": "1 Prismarine Crystals",
 	"container.enchant.prismarine_crystals.many": "%s Prismarine Crystals",
 	"container.enchant.blaze_powder.one": "1 Blaze Powder",
 	"container.enchant.blaze_powder.many": "%s Blaze Powder",
 	"container.enchant.ender_eye.one": "1 Eye of Ender",
 	"container.enchant.ender_eye.many": "%s Eye of Ender",
+	"container.enchant.echo_shard.one": "1 Echo Shard",
+	"container.enchant.echo_shard.many": "%s Echo Shard",
 	"enchantment.minsenchantments.waterbolt": "Waterbolt",
 	"enchantment.minsenchantments.waterbolt.desc": "projectiles don¡¯t get affected by liquid blocks",
 	"enchantment.minsenchantments.mermaids_blessing": "Mermaid's Blessing",
@@ -55,6 +59,16 @@
 	"enchantment.minsenchantments.flame_thorn.desc": "inflict fire with thorn damage when attacked",
 	"enchantment.minsenchantments.dry": "Dry",
 	"enchantment.minsenchantments.dry.desc": "absorb nearby water when sneak",
+	"enchantment.minsenchantments.soul_fire": "Soul Fire",
+	"enchantment.minsenchantments.soul_fire.desc": "inflict soul fire to enemy. which deal 2 dmg for each sec",
+	"enchantment.minsenchantments.teleportation": "Teleportation",
+	"enchantment.minsenchantments.teleportation.desc": "teleport to location of projectile",
+	"enchantment.minsenchantments.sonic_boom": "Sonic Boom",
+	"enchantment.minsenchantments.sonic_boom.desc": "shoot warden sonic boom",
+	"enchantment.minsenchantments.infection": "Infection",
+	"enchantment.minsenchantments.infection.desc": "increase exp drop amount from mined block",
+	"enchantment.minsenchantments.concealment": "Concealment",
+	"enchantment.minsenchantments.concealment.desc": "remove any sound that caused by you",
 	"enchantment.minsenchantments.recochet": "Recochet",
 	"enchantment.minsenchantments.recochet.desc": "projectile bounce when hit",
 	"enchantment.minsenchantments.climb": "Climb",
