added blessing table and some changes

--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -7,6 +7,8 @@
 	"item.minsenchantments.end_enchanting_table": "End Enchanting Table",
 	"block.minsenchantments.sculk_enchanting_table": "Sculk Enchanting Table",
 	"item.minsenchantments.sculk_enchanting_table": "Sculk Enchanting Table",
+	"block.minsenchantments.blessing_table": "Blessing Table",
+	"item.minsenchantments.blessing_table": "Blessing Table",
 	"container.enchant.prismarine_crystals.one": "1 Prismarine Crystals",
 	"container.enchant.prismarine_crystals.many": "%s Prismarine Crystals",
 	"container.enchant.blaze_powder.one": "1 Blaze Powder",
@@ -15,6 +17,8 @@
 	"container.enchant.ender_eye.many": "%s Eye of Ender",
 	"container.enchant.echo_shard.one": "1 Echo Shard",
 	"container.enchant.echo_shard.many": "%s Echo Shard",
+	"container.bless.nether_star.one": "1 Nether Star",
+	"container.bless.nether_star.many": "%s Nether Star",
 	"enchantment.minsenchantments.waterbolt": "Waterbolt",
 	"enchantment.minsenchantments.waterbolt.desc": "projectiles don¡¯t get affected by liquid blocks",
 	"enchantment.minsenchantments.mermaids_blessing": "Mermaid's Blessing",
