added blessments and other things

--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -19,6 +19,24 @@
 	"container.enchant.echo_shard.many": "%s Echo Shard",
 	"container.bless.nether_star.one": "1 Nether Star",
 	"container.bless.nether_star.many": "%s Nether Star",
+	"enchantment.minsenchantments.barrier": "Barrier",
+	"enchantment.minsenchantments.barrier.desc": "push entities and projectiles in certain range",
+	"enchantment.minsenchantments.hardening": "Hardening",
+	"enchantment.minsenchantments.hardening.desc": "taking damage will increase your defence",
+	"enchantment.minsenchantments.rage": "Rage",
+	"enchantment.minsenchantments.rage.desc": "each hit increase the attack damage",
+	"enchantment.minsenchantments.returning": "Returning",
+	"enchantment.minsenchantments.returning.desc": "when die, return to last position using durability of armor",
+	"enchantment.minsenchantments.homing": "Homing",
+	"enchantment.minsenchantments.homing.desc": "projectile follow nearby enemy",
+	"enchantment.minsenchantments.mirror": "Mirror",
+	"enchantment.minsenchantments.mirror.desc": "chance to reflect damage and projectile with shield in offhand",
+	"enchantment.minsenchantments.soul_of_terrarian": "Soul of Terrarian",
+	"enchantment.minsenchantments.soul_of_terrarian.desc": "when projectile hit, extra projectiles appear",
+	"enchantment.minsenchantments.god_hand": "God Hand",
+	"enchantment.minsenchantments.god_hand.desc": "decrease cooldown of item",
+	"enchantment.minsenchantments.malice": "Malice",
+	"enchantment.minsenchantments.malice.desc": "hugely decrease damage, but deal health percent damage",
 	"enchantment.minsenchantments.waterbolt": "Waterbolt",
 	"enchantment.minsenchantments.waterbolt.desc": "projectiles don¡¯t get affected by liquid blocks",
 	"enchantment.minsenchantments.mermaids_blessing": "Mermaid's Blessing",
@@ -32,11 +50,11 @@
 	"enchantment.minsenchantments.waves_protection": "Wave's Protection",
 	"enchantment.minsenchantments.waves_protection.desc": "while in water, increase the swim speed for a short amount of time when attacked",
 	"enchantment.minsenchantments.lord_of_the_sea": "Lord of the Sea",
-	"enchantment.minsenchantments.lord_of_the_sea.desc": "while in water, nearby water animals fight with you when you attacked",
+	"enchantment.minsenchantments.lord_of_the_sea.desc": "while in water, nearby water animals will fight for you when you attacked",
 	"enchantment.minsenchantments.sailing": "Sailing",
-	"enchantment.minsenchantments.sailing.desc": "increase speed of riding vehicle",
+	"enchantment.minsenchantments.sailing.desc": "increase speed of vehicle",
 	"enchantment.minsenchantments.water_jet": "Water Jet",
-	"enchantment.minsenchantments.water_jet.desc": "able to shoot water jet without arrow while in water. while outside water, you can using splash water bottle to reload crossbow",
+	"enchantment.minsenchantments.water_jet.desc": "while inside water, able to shoot bow without arrow. while outside water, you can using splash water bottle to reload crossbow",
 	"enchantment.minsenchantments.aquatic_aura": "Aquatic Aura",
 	"enchantment.minsenchantments.aquatic_aura.desc": "make nearby entities inside underwater. decrease move speed, unable to breath, projectiles become slower",
 	"enchantment.minsenchantments.curse_of_mermaid": "Curse of Mermaid",
@@ -46,63 +64,61 @@
 	"enchantment.minsenchantments.curse_of_abyss": "Curse of Abyss",
 	"enchantment.minsenchantments.curse_of_abyss.desc": "decrease fov while inside water",
 	"enchantment.minsenchantments.curse_of_undead": "Curse of Undead",
-	"enchantment.minsenchantments.curse_of_undead.desc": "while in daylight, burn like a undead",
+	"enchantment.minsenchantments.curse_of_undead.desc": "while in daylight, you will burn like a undead",
 	"enchantment.minsenchantments.curse_of_enderman": "Curse of Enderman",
-	"enchantment.minsenchantments.curse_of_enderman.desc": "deal damage while in water, like a enderman",
+	"enchantment.minsenchantments.curse_of_enderman.desc": "becomes vulnerable to water. like a enderman",
 	"enchantment.minsenchantments.curse_of_sinking": "Curse of Sinking",
 	"enchantment.minsenchantments.curse_of_sinking.desc": "make you sink in water",
 	"enchantment.minsenchantments.rusty": "Rusty",
-	"enchantment.minsenchantments.rusty.desc": "decrease durability of item contantly while inside water",
+	"enchantment.minsenchantments.rusty.desc": "while inside water, contantly decrease durability of item",
 	"enchantment.minsenchantments.overgravity": "Overgravity",
-	"enchantment.minsenchantments.overgravity.desc": "increase the falling speed and fall damage. max level cause explosion on fall",
+	"enchantment.minsenchantments.overgravity.desc": "increase the falling speed and fall damage.",
 	"enchantment.minsenchantments.lava_walker": "Lava Walker",
-	"enchantment.minsenchantments.lava_walker.desc": "similar with frost walker, but for lava (also no block)",
+	"enchantment.minsenchantments.lava_walker.desc": "able to walk over lava",
 	"enchantment.minsenchantments.auto_smelt": "Auto Smelt",
-	"enchantment.minsenchantments.auto_smelt.desc": "automatically smelt blocks when mined",
+	"enchantment.minsenchantments.auto_smelt.desc": "automatically smelt blocks",
 	"enchantment.minsenchantments.flame_thorn": "Flame Thorn",
-	"enchantment.minsenchantments.flame_thorn.desc": "inflict fire with thorn damage when attacked",
+	"enchantment.minsenchantments.flame_thorn.desc": "when enemy attack you, deal daamge and fire",
 	"enchantment.minsenchantments.dry": "Dry",
 	"enchantment.minsenchantments.dry.desc": "absorb nearby water when sneak",
 	"enchantment.minsenchantments.soul_fire": "Soul Fire",
-	"enchantment.minsenchantments.soul_fire.desc": "inflict soul fire to enemy. which deal 2 dmg for each sec",
+	"enchantment.minsenchantments.soul_fire.desc": "inflict soul fire to enemy. which deal 2x damage of normal one",
 	"enchantment.minsenchantments.teleportation": "Teleportation",
 	"enchantment.minsenchantments.teleportation.desc": "teleport to location of projectile",
 	"enchantment.minsenchantments.sonic_boom": "Sonic Boom",
-	"enchantment.minsenchantments.sonic_boom.desc": "shoot warden sonic boom",
+	"enchantment.minsenchantments.sonic_boom.desc": "shoot warden sonic boom instead of arrow",
 	"enchantment.minsenchantments.infection": "Infection",
-	"enchantment.minsenchantments.infection.desc": "increase exp drop amount from mined block",
+	"enchantment.minsenchantments.infection.desc": "increase exp orb count from blocks",
 	"enchantment.minsenchantments.concealment": "Concealment",
-	"enchantment.minsenchantments.concealment.desc": "remove any sound that caused by you",
+	"enchantment.minsenchantments.concealment.desc": "silence all sounds you make",
 	"enchantment.minsenchantments.recochet": "Recochet",
-	"enchantment.minsenchantments.recochet.desc": "projectile bounce when hit",
+	"enchantment.minsenchantments.recochet.desc": "projectiles bounce off walls",
 	"enchantment.minsenchantments.climb": "Climb",
-	"enchantment.minsenchantments.climb.desc": "you can climb wall like a spider",
+	"enchantment.minsenchantments.climb.desc": "able to climb wall like a spider",
 	"enchantment.minsenchantments.critical_strike": "Critical Strike",
-	"enchantment.minsenchantments.critical_strike.desc": "change normal attack to critical attack depending on chance",
+	"enchantment.minsenchantments.critical_strike.desc": "chance to do critical attack",
 	"enchantment.minsenchantments.leech": "Leech",
-	"enchantment.minsenchantments.leech.desc": "heal your health depending on chance",
+	"enchantment.minsenchantments.leech.desc": "chance to absorb enemies health",
 	"enchantment.minsenchantments.wallbreak": "Wallbreak",
-	"enchantment.minsenchantments.wallbreak.desc": "projectile ignore blocks",
+	"enchantment.minsenchantments.wallbreak.desc": "projectile can ignore blocks",
 	"enchantment.minsenchantments.snipe": "Snipe",
-	"enchantment.minsenchantments.snipe.desc": "increase damage and accuracy of projectile, but decrease charging speed",
+	"enchantment.minsenchantments.snipe.desc": "increase damage and accuracy of projectile, but hugely decrease charging speed",
 	"enchantment.minsenchantments.magnet": "Magnet",
 	"enchantment.minsenchantments.magnet.desc": "attract nearby xp orb and items while sneak",
 	"enchantment.minsenchantments.auto_shielding": "Auto Shielding",
-	"enchantment.minsenchantments.auto_shielding.desc": "automatically use shield depending on chance when held in offhand",
-	"enchantment.minsenchantments.barrier": "Barrier",
-	"enchantment.minsenchantments.barrier.desc": "push entities and projectiles in certain range",
+	"enchantment.minsenchantments.auto_shielding.desc": "chance to automatically use shield in offhand",
 	"enchantment.minsenchantments.skillful": "Skillful",
-	"enchantment.minsenchantments.skillful.desc": "increase damage when durability is low",
+	"enchantment.minsenchantments.skillful.desc": "damage increases depending on number of uses",
 	"enchantment.minsenchantments.cell_division": "Cell Division",
-	"enchantment.minsenchantments.cell_division.desc": "projectile split to another small projectile on hit",
+	"enchantment.minsenchantments.cell_division.desc": "when projectile hit something, it will split to smaller one",
 	"enchantment.minsenchantments.quickdraw": "Quickdraw",
-	"enchantment.minsenchantments.quickdraw.desc": "increase charging speed",
+	"enchantment.minsenchantments.quickdraw.desc": "increase charging speed of bow",
 	"enchantment.minsenchantments.takeoff": "Takeoff",
-	"enchantment.minsenchantments.takeoff.desc": "able to start fly even in ground",
+	"enchantment.minsenchantments.takeoff.desc": "allows you to start flying even from low place",
 	"enchantment.minsenchantments.armor_crack": "Armor Crack",
-	"enchantment.minsenchantments.armor_crack.desc": "increase damage depending on enemies armor",
+	"enchantment.minsenchantments.armor_crack.desc": "deal additional damage depending on enemies armor",
 	"enchantment.minsenchantments.accelerate": "Accelerate",
-	"enchantment.minsenchantments.accelerate.desc": "increase attack speed for each hit",
+	"enchantment.minsenchantments.accelerate.desc": "each hit increase the attack speed",
 	"enchantment.minsenchantments.miner": "Miner",
-	"enchantment.minsenchantments.miner.desc": "projectile destroy blocks on hit"
+	"enchantment.minsenchantments.miner.desc": "when projectile hit block, it will destroy the blocks"
 }
