--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -24,7 +24,7 @@
 	"enchantment.minsenchantments.hardening": "Hardening",
 	"enchantment.minsenchantments.hardening.desc": "taking damage will increase your defence",
 	"enchantment.minsenchantments.rage": "Rage",
-	"enchantment.minsenchantments.rage.desc": "each hit increase the attack damage",
+	"enchantment.minsenchantments.rage.desc": "each hit increase the attack damage and attack speed",
 	"enchantment.minsenchantments.returning": "Returning",
 	"enchantment.minsenchantments.returning.desc": "when die, return to last position using durability of armor",
 	"enchantment.minsenchantments.homing": "Homing",
@@ -37,8 +37,18 @@
 	"enchantment.minsenchantments.god_hand.desc": "decrease cooldown of item",
 	"enchantment.minsenchantments.malice": "Malice",
 	"enchantment.minsenchantments.malice.desc": "hugely decrease damage, but deal health percent damage",
+	"enchantment.minsenchantments.auto_shielding": "Auto Shielding",
+	"enchantment.minsenchantments.auto_shielding.desc": "chance to automatically use shield in offhand",
+	"enchantment.minsenchantments.grinding": "Grinding",
+	"enchantment.minsenchantments.grinding.desc": "increases attack damage, attack speed, mining speed, projectile speed depending on durability",
+	"enchantment.minsenchantments.accelerate": "Accelerate",
+	"enchantment.minsenchantments.accelerate.desc": "increase pulling speed of weapons",
+	"enchantment.minsenchantments.critical_strike": "Critical Strike",
+	"enchantment.minsenchantments.critical_strike.desc": "chance to do critical attack",
+	"enchantment.minsenchantments.heart_steal": "Heart Steal",
+	"enchantment.minsenchantments.heart_steal.desc": "chance to steal enemies health",
 	"enchantment.minsenchantments.waterbolt": "Waterbolt",
-	"enchantment.minsenchantments.waterbolt.desc": "projectiles don¡¯t get affected by liquid blocks",
+	"enchantment.minsenchantments.waterbolt.desc": "projectiles dosen't affected by liquid blocks",
 	"enchantment.minsenchantments.mermaids_blessing": "Mermaid's Blessing",
 	"enchantment.minsenchantments.mermaids_blessing.desc": "while swimming, hostile mobs doesn't attack you",
 	"enchantment.minsenchantments.sharp_waves": "Sharp Waves",
@@ -95,30 +105,18 @@
 	"enchantment.minsenchantments.recochet.desc": "projectiles bounce off walls",
 	"enchantment.minsenchantments.climb": "Climb",
 	"enchantment.minsenchantments.climb.desc": "able to climb wall like a spider",
-	"enchantment.minsenchantments.critical_strike": "Critical Strike",
-	"enchantment.minsenchantments.critical_strike.desc": "chance to do critical attack",
-	"enchantment.minsenchantments.leech": "Leech",
-	"enchantment.minsenchantments.leech.desc": "chance to absorb enemies health",
 	"enchantment.minsenchantments.wallbreak": "Wallbreak",
 	"enchantment.minsenchantments.wallbreak.desc": "projectile can ignore blocks",
-	"enchantment.minsenchantments.snipe": "Snipe",
-	"enchantment.minsenchantments.snipe.desc": "increase damage and accuracy of projectile, but hugely decrease charging speed",
+	"enchantment.minsenchantments.hitscan": "Hitscan",
+	"enchantment.minsenchantments.hitscan.desc": "increase the speed of projectile",
 	"enchantment.minsenchantments.magnet": "Magnet",
 	"enchantment.minsenchantments.magnet.desc": "attract nearby xp orb and items while sneak",
-	"enchantment.minsenchantments.auto_shielding": "Auto Shielding",
-	"enchantment.minsenchantments.auto_shielding.desc": "chance to automatically use shield in offhand",
-	"enchantment.minsenchantments.skillful": "Skillful",
-	"enchantment.minsenchantments.skillful.desc": "damage increases depending on number of uses",
 	"enchantment.minsenchantments.cell_division": "Cell Division",
 	"enchantment.minsenchantments.cell_division.desc": "when projectile hit something, it will split to smaller one",
-	"enchantment.minsenchantments.quickdraw": "Quickdraw",
-	"enchantment.minsenchantments.quickdraw.desc": "increase charging speed of bow",
 	"enchantment.minsenchantments.takeoff": "Takeoff",
 	"enchantment.minsenchantments.takeoff.desc": "allows you to start flying even from low place",
 	"enchantment.minsenchantments.armor_crack": "Armor Crack",
 	"enchantment.minsenchantments.armor_crack.desc": "deal additional damage depending on enemies armor",
-	"enchantment.minsenchantments.accelerate": "Accelerate",
-	"enchantment.minsenchantments.accelerate.desc": "each hit increase the attack speed",
 	"enchantment.minsenchantments.miner": "Miner",
 	"enchantment.minsenchantments.miner.desc": "when projectile hit block, it will destroy the blocks"
 }
