--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -17,8 +17,8 @@
 	"container.enchant.ender_eye.many": "%s Eye of Ender",
 	"container.enchant.echo_shard.one": "1 Echo Shard",
 	"container.enchant.echo_shard.many": "%s Echo Shard",
-	"container.bless.nether_star.one": "1 Nether Star",
-	"container.bless.nether_star.many": "%s Nether Star",
+	"container.bless.holy_emblem.one": "1 Holy Emblem",
+	"container.bless.holy_emblem.many": "%s Holy Emblem",
 	"enchantment.minsenchantments.barrier": "Barrier",
 	"enchantment.minsenchantments.barrier.desc": "push entities and projectiles in certain range",
 	"enchantment.minsenchantments.hardening": "Hardening",
@@ -107,8 +107,6 @@
 	"enchantment.minsenchantments.climb.desc": "able to climb wall like a spider",
 	"enchantment.minsenchantments.wallbreak": "Wallbreak",
 	"enchantment.minsenchantments.wallbreak.desc": "projectile can ignore blocks",
-	"enchantment.minsenchantments.hitscan": "Hitscan",
-	"enchantment.minsenchantments.hitscan.desc": "increase the speed of projectile",
 	"enchantment.minsenchantments.magnet": "Magnet",
 	"enchantment.minsenchantments.magnet.desc": "attract nearby xp orb and items while sneak",
 	"enchantment.minsenchantments.cell_division": "Cell Division",
