--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -9,6 +9,7 @@
 	"item.minsenchantments.sculk_enchanting_table": "Sculk Enchanting Table",
 	"block.minsenchantments.blessing_table": "Blessing Table",
 	"item.minsenchantments.blessing_table": "Blessing Table",
+	"item.minsenchantments.holy_emblem": "Holy Emblem",
 	"container.enchant.prismarine_crystals.one": "1 Prismarine Crystals",
 	"container.enchant.prismarine_crystals.many": "%s Prismarine Crystals",
 	"container.enchant.blaze_powder.one": "1 Blaze Powder",
