--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -48,6 +48,16 @@
 	"enchantment.minsenchantments.critical_strike.desc": "chance to do critical attack",
 	"enchantment.minsenchantments.heart_steal": "Heart Steal",
 	"enchantment.minsenchantments.heart_steal.desc": "chance to steal enemies health",
+	"enchantment.minsenchantments.healing_cutter": "Healing Cutter",
+	"enchantment.minsenchantments.healing_cutter.desc": "chance to reduce enemies healing for a specific duration",
+	"enchantment.minsenchantments.air_swimming": "Air Swimming",
+	"enchantment.minsenchantments.air_swimming.desc": "able to swim in air",
+	"enchantment.minsenchantments.multi_strike": "Multi Strike",
+	"enchantment.minsenchantments.multi_strike.desc": "chance to do extra attack",
+	"enchantment.minsenchantments.solaria": "Solaria",
+	"enchantment.minsenchantments.solaria.desc": "recover items durability while under the sun",
+	"enchantment.minsenchantments.time_break": "Time Break",
+	"enchantment.minsenchantments.time_break.desc": "chance to stop enemies time for a specific duration",
 	"enchantment.minsenchantments.waterbolt": "Waterbolt",
 	"enchantment.minsenchantments.waterbolt.desc": "projectiles dosen't affected by liquid blocks",
 	"enchantment.minsenchantments.mermaids_blessing": "Mermaid's Blessing",
