--- a/src/main/resources/assets/minsenchantments/lang/en_us.json
+++ b/src/main/resources/assets/minsenchantments/lang/en_us.json
@@ -99,11 +99,11 @@
 	"enchantment.minsenchantments.auto_smelt": "Auto Smelt",
 	"enchantment.minsenchantments.auto_smelt.desc": "automatically smelt blocks",
 	"enchantment.minsenchantments.flame_thorn": "Flame Thorn",
-	"enchantment.minsenchantments.flame_thorn.desc": "when enemy attack you, deal daamge and fire",
+	"enchantment.minsenchantments.flame_thorn.desc": "when enemy attack you, deal damage back to enemy and burn them in fire",
 	"enchantment.minsenchantments.dry": "Dry",
 	"enchantment.minsenchantments.dry.desc": "absorb nearby water when sneak",
 	"enchantment.minsenchantments.soul_fire": "Soul Fire",
-	"enchantment.minsenchantments.soul_fire.desc": "inflict soul fire to enemy. which deal 2x damage of normal one",
+	"enchantment.minsenchantments.soul_fire.desc": "inflict soul fire to enemy. which deal 2 damage per tick",
 	"enchantment.minsenchantments.teleportation": "Teleportation",
 	"enchantment.minsenchantments.teleportation.desc": "teleport to location of projectile",
 	"enchantment.minsenchantments.sonic_boom": "Sonic Boom",
